# guruvijay-

./: MLmodel.ipynb  README.md  app.py  housing_price_model.pkl  pyproject.toml
